kubernetes/tides-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tides-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tides-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tides-server
    spec:
      containers:
        - name: tides-server
          image: llamagraphics/trmnl-tides:dev
          imagePullPolicy: Always
          # args: ["--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
          # securityContext:
          #   readOnlyRootFilesystem: true
          # readinessProbe:
          #   httpGet:
          #     port: apache
          #     path: /
          #   timeoutSeconds: 3
          ports:
            - name: vapor
              containerPort: 80
      securityContext:
        fsGroup: 999
