kubernetes/tides-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tides-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: tides-server
